# pc_simulator_sdl_eclipse

./: .clang-format  .gitignore  CMakeLists.txt  compile.sh  lv_conf.h  lv_drv_conf.h  main.c  tags
RTOS/: CMakeLists.txt
RTOS/FreeRTOS/Demo/Posix_GCC/: Makefile  Trace.dump  main_blinky.c
RTOS/FreeRTOS/Demo/Posix_GCC/can/: can_message.c  can_message.h  can_signal_123.c  can_signal_124.c  test_can.c  test_can.h
RTOS/FreeRTOS/Demo/Posix_GCC/data/: data_receive.c  data_receive.h  fuel_calc.c  fuel_calc.h  globals_calc.c  globals_calc.h  mileage_calc.c  mileage_calc.h
RTOS/FreeRTOS/Demo/Posix_GCC/tool/: constrant.h
RTOS/FreeRTOS/Source/: vhook.c
cell/: CMakeLists.txt  cell.c  cell.h  project_schedule.md  view.c  view.h  菜单.md  车速.md  辛普森算法.md
cell/config/: config.c  config.h
cell/data/: data_receive.c  data_receive.h  veh_data.c  veh_data.h  veh_data_update.h
cell/font/: HarmonyOS_Sans_SC_16.c  HarmonyOS_Sans_SC_20.c  HarmonyOS_Sans_SC_24.c  HarmonyOS_Sans_SC_30.c  HarmonyOS_Sans_SC_80.c  MicrosoftYaHei_20.c  MicrosoftYaHei_22.c  MicrosoftYaHei_30.c  Plagiata_37.c  SourceHanSansCN_18.c
cell/key/: button_manager.c
cell/language/: lang.c  lang.h
cell/light/: light.c  light.h  light_control.c  light_model.c  light_model.h  light_view.c  light_view.h
cell/menu/: backlight.c  basic_info.c  bluetooth.c  button_control.c  button_control.h  clock.c  display.c  fault.c  fault_info.c  language.c  menu_component.c  menu_component.h  menu_manager.c  menu_navigate.c  menu_navigate.h  mobile.c  odo_info.c  settings.c  settings.h  settings2.c  trip_info.c  unit.c  vehilce.c
cell/other/: motor_controller.c  motor_controller.h  motor_model.c
cell/screens/: main_window.c  menu_window.c  menu_window.h  mobile_window.c  mobile_window.h  window_manager.c
cell/third/json/: cJSON.c  cJSON.h  json_utils.c
cell/tool/: byte_utils.c  checkself.c  constrant.c  constrant.h  enums.h  log.h  mirror.c  mirror.h  tool.c  tool.h  ui_helpers.c  ui_helpers.h
cell/view/: blink_manager.h  gear_view.c  gear_view.h  guage_view.c  guage_view.h  other_view.c  other_view.h  rpm_view.c  rpm_view.h  speed_view.c  speed_view.h  time_view.c
lv_drivers/sdl/: sdl_common.c
lvgl/demos/cell/: cell.c  cell.h  home_en.md  home_zh.md  menu_manager.c  menu_manager.h  menu_theme.c  menu_theme.h  ui_component.h
lvgl/demos/cell/config/: config.c  config.h
lvgl/demos/cell/data/: data_receive.c  data_receive.h  veh_data.c  veh_data.h  veh_data_update.c
lvgl/demos/cell/font/: AlternateGotNo2D_105.c  AlternateGotNo2D_15.c  AlternateGotNo2D_20.c  AlternateGotNo2D_45.c  HarmonyOS_Sans_SC_24.c  HarmonyOS_Sans_SC_28.c  HarmonyOS_Sans_SC_36.c  HarmonyOS_Sans_SC_40.c  MicrosoftYaHei_18.c  MicrosoftYaHei_22.c  MicrosoftYaHei_30.c  NimbusSanNovT_12.c  NimbusSanNovT_14.c  NimbusSanNovT_33.c  Plagiata_27.c  SourceHanSansCN_22.c  SourceHanSansCN_28.c  SourceHanSansCN_34.c
lvgl/demos/cell/images/: battery_line.c  menu_day_bluetooth_icon.c  menu_day_brightness_icon.c  menu_day_center_bg.c  menu_day_connetion_icon.c  menu_day_language_icon.c  menu_day_left_normal.c  menu_day_left_selected.c  menu_day_right_normal.c  menu_day_right_selected.c  menu_day_time_set_icon.c  menu_day_tp_info_icon.c  menu_day_unit_set_icon.c
lvgl/demos/cell/key/: button_manager.c  button_manager.h
lvgl/demos/cell/language/: lang.c  lang.h
lvgl/demos/cell/light/: light.c  light.h  light_control.c  light_control.h  light_controller.c  light_controller.h  light_model.c  light_model.h  light_view.c  light_view.h
lvgl/demos/cell/menu/: backlight.c  basic_info.c  bluetooth.c  button_control.c  clock.c  display.c  fault.c  fault_info.c  language.c  left_menu.c  left_menu.h  menu.h  menu_component.c  menu_component.h  menu_manager.c  menu_manager.h  menu_navigate.c  menu_navigate.h  mobile.c  music.c  music.h  navigation.c  navigation.h  odo_info.c  phone.c  phone.h  preview.c  preview.h  settings.c  settings.h  settings2.c  side_bar.c  side_bar.h  trip_info.c  ui_helpers.c  ui_helpers.h  unit.c  vehicle_settings.c  vehicle_settings.h  vehilce.c
lvgl/demos/cell/other/: motor_controller.c  motor_controller.h  motor_model.c  motor_model.h
lvgl/demos/cell/screens/: home_screen.c  home_screen.h  main_screen.c  main_screen.h  main_window.c  main_window.h  menu_screen.c  menu_screen.h  menu_window.c  menu_window.h  mobile_window.c  screen_interface.c  screen_interface.h  window_manager.c  window_manager.h
lvgl/demos/cell/third/json/: json_utils.c  json_utils.h
lvgl/demos/cell/tool/: button_manager.c  button_manager.h  byte_utils.c  byte_utils.h  checkself.c  checkself.h  constrant.c  constrant.h  enums.h  log.h  tool.c  tool.h  ui_helpers.c  ui_helpers.h
lvgl/demos/cell/view/: blink_manager.c  blink_manager.h  gear_view.c  gear_view.h  guage_view.c  guage_view.h  oil_view.c  oil_view.h  other_view.c  other_view.h  rpm_view.c  rpm_view.h  speed_view.c  speed_view.h  time_view.c  time_view.h  view_menu.c  view_menu.h  view_other.c  view_other.h  view_speed.c  view_speed.h  view_time.h  water_view.c  water_view.h
lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
lvgl/src/extra/widgets/meter/: lv_meter.h
lvgl/src/widgets/: lv_textarea.c
